# khmer-space-injector-mlops

./: .env.example  LICENSE  Makefile  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: main.py  main_state.py
apps/api/app/api/routes/: health.py  history.py  metrics.py  records.py  segment.py
apps/api/app/core/: config.py  logging.py  metrics.py
apps/api/app/db/: session.py
apps/api/app/db/repo/: record_repo.py
apps/api/app/models/: record.py
apps/api/app/schemas/: record.py  segment.py
apps/api/app/services/: artifacts.py  net.py  segmenter.py  utils.py
apps/api/artifacts/: config.json  vocab.json
apps/api/tests/api/: conftest.py  test_health_route.py  test_history_route.py  test_segment_route.py
apps/api/tests/unit/: test_artifacts.py  test_segmenter.py
apps/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: index.css  main.tsx
apps/frontend/src/app/: App.css  App.tsx
apps/frontend/src/features/history/: HistoryPage.css  HistoryPage.tsx  historyApi.ts
apps/frontend/src/features/segment/: Segment.css  Segment.tsx  segmentApi.ts
infra/: docker-compose.yml
infra/nginx/: Dockerfile  default.conf
infra/scripts/: db_migrate.sh  deploy.sh  provision_vm.sh
infra/systemd/: fastapi.service  khmer-space-injector.service
