[project]
name = "khmer-segmentation-api"
version = "0.1.0"
description = "FastAPI backend for Khmer word segmentation (space injection)"
requires-python = ">=3.10"

# Dependencies are managed via requirements.txt for now
dependencies = []


# -------------------------
# Pytest configuration
# -------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]


# -------------------------
# (Optional, future-proof)
# Ruff / Black placeholders
# -------------------------
# These sections do nothing until you install the tools.
# Keeping them now avoids refactors later.

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]
