[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khmer-space-injector-api"
version = "0.1.0"
description = "FastAPI service for Khmer space injection"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "sqlalchemy",
  "psycopg[binary]",
  "psycopg2",
  "httpx",
  "pytest",
  "torch",
  "numpy",
  "scikit-learn",
  "alembic",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"